--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/navbar.css">
+    <link rel="stylesheet" href="css/sidenav.css">
+
     <!-- Fuente de letra -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,36 +22,36 @@
 </head>
 <header>
     <!-- barra de navegación-->
-    <nav class="navbar navbar-expand-sm">
-        <div>
-            <!--boton perfil-->
-            <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown">
-                <img class="img-fluid profile" src="img/perfil.png" />
-            </button>
-            <ul class="dropdown-menu">
-                <li><a class="dropdown-item fs-5" href="perfil.html">Perfil</a></li>
-                <li><a class="dropdown-item fs-5" href="inventario.html">Inventario Admi</a></li>
-                <li><a class="dropdown-item fs-5" href="pedidos.html">Historial de pedidos</a></li>
-                <li><a class="dropdown-item fs-5" href="historialCompra.html">Historial de compras</a></li>
-                <li><a class="dropdown-item fs-5" href="listaUsuarios.html">Lista de usuarios</a></li>
-                <li><a class="dropdown-item fs-5" href="#">Cerrar Sesión</a></li>
-            </ul>
-        </div>
-        <div class="container-fluid">
-            <!-- Título centrado -->
-            <div class="mx-auto">
-                <a class="navbar-brand" href="index.html">DRUIDS</a>
+    <nav class="navbar navbar-expand-sm row">
+        <div id="espacio-sesion" class="col-3 d-flex justify-content-start">
+            <div id="boton-perfil">
+                <!--boton perfil-->
+                <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown">
+                    <img class="img-fluid profile" src="img/perfil.png" />
+                </button>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item fs-5" href="perfil.html">Perfil</a></li>
+                    <li><a class="dropdown-item fs-5" href="historialCompra.html">Historial de compras</a></li>
+                    <li><a id="cerrar-sesion" class="dropdown-item fs-5">Cerrar Sesión</a></li>
+                </ul>
+            </div>
+            <div>
+                <button id="boton-inicio-sesion" type="button" class="btn" data-bs-toggle="modal" data-bs-target="#myModal">
+                    <h6 id="text-boton-inicio-sesion"><img id="img-iniciar-sesion" src="img/iniciar-sesion1.svg" alt=""><br/>Iniciar sesión</h6>
+                </button>
             </div>
         </div>
-        <!-- Botones de inicio secion y carrito de compra -->
-        <button id="boton-inicio-sesion" type="button" class="btn" data-bs-toggle="modal" data-bs-target="#myModal">
-            <img class="img-fluid profile" src="img/perfil.png" />
-        </button>
-        <button type="button" class="btn">
-            <a href="carrito.html">
-                <img class="img-fluid shopping-cart" src="img/carrito-de-compras.png" />
-            </a>
-        </button>
+        <div class="col-6 d-flex justify-content-center">
+                <a class="navbar-brand" href="index.html">DRUIDS</a>
+        </div>
+        <!-- carrito de compra -->
+        <div class="col-3 d-flex justify-content-end">
+            <button type="button" class="btn">
+                <a href="carrito.html">
+                    <img class="img-fluid shopping-cart" src="img/carrito-de-compras.png" />
+                </a>
+            </button>
+        </div>
     </nav>
     <!-- Modal de inicio de sesión -->
     <div class="modal" id="myModal">
@@ -64,7 +66,7 @@
 
                 <!-- Modal body -->
                 <div class="modal-body">
-                    <form method="get" id="formulario-inicio-sesion" class="needs-validation" novalidate>
+                    <form id="formulario-inicio-sesion" class="needs-validation" novalidate>
                         <div class="mb-3 form-group">
                             <label for="usuario-inicio-sesion" class="form-label fs-4">Nombre de usuario</label>
                             <input type="text" class="form-control fs-5" id="usuario-inicio-sesion"
@@ -180,15 +182,15 @@
 
 <body>
     <div id="mySidenav" class="sidenav">
-        <a class="d-flex justify-content-end " href="#" id="inventario"><img id="img-inventario"
+        <a class="d-flex justify-content-end " href="inventario.html" id="inventario"><img id="img-inventario"
                 src="img/inventario.svg" alt="inventario">
             <h2 class="text-sidebar" id="text-inventario">Inventario</h2>
         </a>
-        <a class="d-flex justify-content-end " href="#" id="pedidos"><img id="img-pedidos" src="img/pedidos.svg"
+        <a class="d-flex justify-content-end " href="pedidos.html" id="pedidos"><img id="img-pedidos" src="img/pedidos.svg"
                 alt="pedidos">
             <h2 class="text-sidebar" id="text-pedidos">Pedidos</h2>
         </a>
-        <a class="d-flex justify-content-end " href="#" id="usuarios"><img id="img-usuarios" src="img/usuarios.svg"
+        <a class="d-flex justify-content-end " href="listaUsuarios.html" id="usuarios"><img id="img-usuarios" src="img/usuarios.svg"
                 alt="usuarios">
             <h2 class="text-sidebar" id="text-usuarios">Usuarios</h2>
         </a>
@@ -324,4 +326,5 @@
 <script src="js/scripts.js"></script>
 <script src="js/validaciones.js"></script>
 <script src="js/sidebar.js"></script>
+<script src="js/sesion.js"></script>
 </html>
