--- a/pago.html
+++ b/pago.html
@@ -9,6 +9,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="css/pago.css" />
     <link rel="stylesheet" href="css/navbar.css">
+    <link rel="stylesheet" href="css/sidenav.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300;400;700&display=swap" rel="stylesheet">
@@ -18,144 +20,181 @@
     <title>Pago</title>
 </head>
 
-<body>
-    <header>
-        <!-- barra de navegación-->
-        <nav class="navbar navbar-expand-sm">
-            <div>
+<header>
+    <!-- barra de navegación-->
+    <nav class="navbar navbar-expand-sm row">
+        <div id="espacio-sesion" class="col-3 d-flex justify-content-start">
+            <div id="boton-perfil">
                 <!--boton perfil-->
                 <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown">
                     <img class="img-fluid profile" src="img/perfil.png" />
                 </button>
                 <ul class="dropdown-menu">
                     <li><a class="dropdown-item fs-5" href="perfil.html">Perfil</a></li>
-                    <li><a class="dropdown-item fs-5" href="inventario.html">Inventario Admi</a></li>
-                    <li><a class="dropdown-item fs-5" href="pedidos.html">Historial de pedidos</a></li>
                     <li><a class="dropdown-item fs-5" href="historialCompra.html">Historial de compras</a></li>
-                    <li><a class="dropdown-item fs-5" href="listaUsuarios.html">Lista de usuarios</a></li>
-                    <li><a class="dropdown-item fs-5" href="#">Cerrar Sesión</a></li>
+                    <li><a id="cerrar-sesion" class="dropdown-item fs-5">Cerrar Sesión</a></li>
                 </ul>
             </div>
-            <div class="container-fluid">
-                <!-- Título centrado -->
-                <div class="mx-auto">
-                    <a class="navbar-brand" href="index.html">DRUIDS</a>
-                </div>
+            <div>
+                <button id="boton-inicio-sesion" type="button" class="btn" data-bs-toggle="modal" data-bs-target="#myModal">
+                    <h6 id="text-boton-inicio-sesion"><img id="img-iniciar-sesion" src="img/iniciar-sesion1.svg" alt=""><br/>Iniciar sesión</h6>
+                </button>
             </div>
-            <!-- Botones de inicio secion y carrito de compra -->
-            <button id="boton-inicio-sesion" type="button" class="btn" data-bs-toggle="modal" data-bs-target="#myModal">
-                <img class="img-fluid profile" src="img/perfil.png" />
-            </button>
+        </div>
+        <div class="col-6 d-flex justify-content-center">
+                <a class="navbar-brand" href="index.html">DRUIDS</a>
+        </div>
+        <!-- carrito de compra -->
+        <div class="col-3 d-flex justify-content-end">
             <button type="button" class="btn">
                 <a href="carrito.html">
                     <img class="img-fluid shopping-cart" src="img/carrito-de-compras.png" />
                 </a>
             </button>
-        </nav>
-        <!-- Modal de inicio de sesión -->
-        <div class="modal" id="myModal">
-            <div class="modal-dialog modal-dialog-centered">
-                <div class="modal-content">
+        </div>
+    </nav>
+    <!-- Modal de inicio de sesión -->
+    <div class="modal" id="myModal">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
 
-                    <!-- Modal Header -->
-                    <div class="modal-header">
-                        <h4 class="modal-title fs-1">Inicio de sesion</h4>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-                    </div>
+                <!-- Modal Header -->
+                <div class="modal-header">
+                    <h4 class="modal-title fs-1">Inicio de sesion</h4>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
 
-                    <!-- Modal body -->
-                    <div class="modal-body">
-                        <form method="get" id="formulario-inicio-sesion" class="needs-validation" novalidate>
-                            <div class="mb-3 form-group">
-                                <label for="usuario-inicio-sesion" class="form-label fs-4">Nombre de usuario</label>
-                                <input type="text" class="form-control fs-5" id="usuario-inicio-sesion"
-                                    name="usuario-inicio-sesion" placeholder="Ingresa tu nombre de usuario">
-                            </div>
-                            <div class="mb-3 form-group">
-                                <label for="password-inicio-sesion" class="form-label fs-4">Contraseña</label>
-                                <input type="password" class="form-control fs-5" id="password-inicio-sesion"
-                                    name="password-inicio-sesion" placeholder="Ingresa tu contraseña">
-                            </div>
-                            <div class="d-grid gap-2">
-                                <button type="submit" class="btn btn-primary fs-4">Iniciar sesión</button>
-                                <button type="button" class="btn btn-secondary fs-4" data-bs-toggle="modal"
-                                    data-bs-target="#registerModal">Registrarse</button>
-                            </div>
-                        </form>
-                    </div>
-                    <!-- Modal footer -->
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-danger fs-5" data-bs-dismiss="modal">Cerrar</button>
-                    </div>
+                <!-- Modal body -->
+                <div class="modal-body">
+                    <form id="formulario-inicio-sesion" class="needs-validation" novalidate>
+                        <div class="mb-3 form-group">
+                            <label for="usuario-inicio-sesion" class="form-label fs-4">Nombre de usuario</label>
+                            <input type="text" class="form-control fs-5" id="usuario-inicio-sesion"
+                                name="usuario-inicio-sesion" placeholder="Ingresa tu nombre de usuario">
+                        </div>
+                        <div class="mb-3 form-group">
+                            <label for="password-inicio-sesion" class="form-label fs-4">Contraseña</label>
+                            <input type="password" class="form-control fs-5" id="password-inicio-sesion"
+                                name="password-inicio-sesion" placeholder="Ingresa tu contraseña">
+                        </div>
+                        <div class="d-grid gap-2">
+                            <button type="submit" class="btn btn-primary fs-4">Iniciar sesión</button>
+                            <button type="button" class="btn btn-secondary fs-4" data-bs-toggle="modal"
+                                data-bs-target="#registerModal">Registrarse</button>
+                        </div>
+                    </form>
+                </div>
+                <!-- Modal footer -->
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger fs-5" data-bs-dismiss="modal">Cerrar</button>
                 </div>
             </div>
         </div>
-        <!-- The Register Modal -->
-        <div class="modal" id="registerModal">
-            <div class="modal-dialog modal-dialog-centered">
-                <div class="modal-content">
-                    <!-- Modal Header -->
-                    <div class="modal-header">
-                        <h4 class="modal-title fs-1">Registro</h4>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-                    </div>
-                    <!-- Modal body -->
-                    <div class="modal-body">
-                        <form method="get" id="formulario-registro" class="needs-validation">
-                            <div class="mb-3 form-group">
-                                <label for="usuario-registro" class="form-label fs-4">Nombre de usuario</label>
-                                <input type="text" class="form-control fs-5" id="usuario-registro"
-                                    name="usuario-registro" placeholder="Ingresa tu nombre de usuario">
+    </div>
+    <!-- The Register Modal -->
+    <div class="modal" id="registerModal">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <!-- Modal Header -->
+                <div class="modal-header">
+                    <h4 class="modal-title fs-1">Registro</h4>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <!-- Modal body -->
+                <div class="modal-body">
+                    <form method="get" id="formulario-registro" class="needs-validation">
+                        <div class="mb-3 form-group">
+                            <label for="usuario-registro" class="form-label fs-4">Nombre de usuario</label>
+                            <input type="text" class="form-control fs-5" id="usuario-registro" name="usuario-registro"
+                                placeholder="Ingresa tu nombre de usuario">
+                        </div>
+                        <div class="mb-3 form-group">
+                            <label for="email-registro" class="form-label fs-4">Email</label>
+                            <input type="email" class="form-control fs-5" id="email-registro" name="email-registro"
+                                placeholder="Ingresa tu email">
+                        </div>
+                        <div class="mb-3 form-group">
+                            <label for="password-registro" class="form-label fs-4">Contraseña</label>
+                            <div class="text-danger font-weight-bold d-flex" id="requerimiento-longitud">
+                                <p class="requerimiento">Al menos 8 caracteres</p><img class="validador"
+                                    src="img/empty-svgrepo-com.svg">
                             </div>
-                            <div class="mb-3 form-group">
-                                <label for="email-registro" class="form-label fs-4">Email</label>
-                                <input type="email" class="form-control fs-5" id="email-registro" name="email-registro"
-                                    placeholder="Ingresa tu email" required>
+                            <div class="text-danger font-weight-bold d-flex" id="requerimiento-mayuscula">
+                                <p class="requerimiento">Al menos una letra mayúscula</p><img class="validador"
+                                    src="img/empty-svgrepo-com.svg">
                             </div>
-                            <div class="mb-3 form-group">
-                                <label for="password-registro" class="form-label fs-4">Contraseña</label>
-                                <div class="text-danger font-weight-bold d-flex" id="requerimiento-longitud">
-                                    <p class="requerimiento">Al menos 8 caracteres</p><img class="validador"
-                                        src="img/empty-svgrepo-com.svg">
-                                </div>
-                                <div class="text-danger font-weight-bold d-flex" id="requerimiento-mayuscula">
-                                    <p class="requerimiento">Al menos una letra mayúscula</p><img class="validador"
-                                        src="img/empty-svgrepo-com.svg">
-                                </div>
-                                <div class="text-danger font-weight-bold d-flex" id="requerimiento-minuscula">
-                                    <p class="requerimiento">Al menos una letra minúscula</p><img class="validador"
-                                        src="img/empty-svgrepo-com.svg">
-                                </div>
-                                <div class="text-danger font-weight-bold d-flex" id="requerimiento-numero">
-                                    <p class="requerimiento">Al menos un número</p><img class="validador"
-                                        src="img/empty-svgrepo-com.svg">
-                                </div>
-                                <div class="text-danger font-weight-bold d-flex" id="requerimiento-especial">
-                                    <p class="requerimiento">Al menos un carácter especial</p><img class="validador"
-                                        src="img/empty-svgrepo-com.svg">
-                                </div>
+                            <div class="text-danger font-weight-bold d-flex" id="requerimiento-minuscula">
+                                <p class="requerimiento">Al menos una letra minúscula</p><img class="validador"
+                                    src="img/empty-svgrepo-com.svg">
+                            </div>
+                            <div class="text-danger font-weight-bold d-flex" id="requerimiento-numero">
+                                <p class="requerimiento">Al menos un número</p><img class="validador"
+                                    src="img/empty-svgrepo-com.svg">
+                            </div>
+                            <div class="text-danger font-weight-bold d-flex" id="requerimiento-especial">
+                                <p class="requerimiento">Al menos un carácter especial</p><img class="validador"
+                                    src="img/empty-svgrepo-com.svg">
+                            </div>
+                            <div class="input-group">
                                 <input type="password" class="form-control fs-5" id="password-registro"
                                     name="password-registro" placeholder="Ingresa tu contraseña">
+                                <button type="button" class="btn" id="boton-ver-contraseña">
+                                    <img src="img/mostrar-pass.svg" alt="Mostrar contraseña"
+                                        class="ver-contraseña mostrar-pass">
+                                    <img src="img/ocultar-pass.svg" alt="Ocultar contraseña"
+                                        class="ver-contraseña ocultar-pass">
+                                </button>
                             </div>
-                            <div class="mb-3">
-                                <label for="password-registro-confirmar" class="form-label fs-4">Confirmar
-                                    contraseña</label>
+                            <div>
+                                <label for="password-registro" class="error"></label>
+                            </div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="password-registro-confirmar" class="form-label fs-4">Confirmar
+                                contraseña</label>
+                            <div class="input-group">
                                 <input type="password" class="form-control fs-5" id="password-registro-confirmar"
-                                    name="password-registro-confirmar" placeholder="Confirma tu contraseña" required>
+                                    name="password-registro-confirmar" placeholder="Confirma tu contraseña">
+                                <button type="button" class="btn" id="boton-ver-contraseña-confirmar">
+                                    <img src="img/mostrar-pass.svg" alt="Mostrar contraseña"
+                                        class="ver-contraseña mostrar-repass">
+                                    <img src="img/ocultar-pass.svg" alt="Ocultar contraseña"
+                                        class="ver-contraseña ocultar-repass">
+                                </button>
                             </div>
-                            <div class="d-grid gap-2">
-                                <button type="submit" class="btn btn-primary fs-4">Registrarse</button>
+                            <div>
+                                <label for="password-registro-confirmar" class="error"></label>
                             </div>
-                        </form>
-                    </div>
-                    <!-- Modal footer -->
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-danger fs-5" data-bs-dismiss="modal">Cerrar</button>
-                    </div>
+                        </div>
+                        <div class="d-grid gap-2">
+                            <button type="submit" class="btn btn-primary fs-4">Registrarse</button>
+                        </div>
+                    </form>
+                </div>
+                <!-- Modal footer -->
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger fs-5" data-bs-dismiss="modal">Cerrar</button>
                 </div>
             </div>
         </div>
-    </header>
+    </div>
+</header>
+
+<body>
+    <div id="mySidenav" class="sidenav">
+        <a class="d-flex justify-content-end " href="inventario.html" id="inventario"><img id="img-inventario"
+                src="img/inventario.svg" alt="inventario">
+            <h2 class="text-sidebar" id="text-inventario">Inventario</h2>
+        </a>
+        <a class="d-flex justify-content-end " href="pedidos.html" id="pedidos"><img id="img-pedidos" src="img/pedidos.svg"
+                alt="pedidos">
+            <h2 class="text-sidebar" id="text-pedidos">Pedidos</h2>
+        </a>
+        <a class="d-flex justify-content-end " href="listaUsuarios.html" id="usuarios"><img id="img-usuarios" src="img/usuarios.svg"
+                alt="usuarios">
+            <h2 class="text-sidebar" id="text-usuarios">Usuarios</h2>
+        </a>
+    </div>
     <main>
         <!--boton de volver atras-->
         <section class="d-flex justify-content-start">
@@ -333,5 +372,6 @@
 <script src="js/validaciones.js"></script>
 <script src="js/pago.js"></script>
 <script src="js/scripts.js"></script>
-
+<script src="js/sesion.js"></script>
+<script src="js/sidebar.js"></script>
 </html>
